--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
   text-align: center;
   font-family: "Times New Roman", Times, serif;
   font-size: 50px;
-  background-color: #cce6ff;
+  background-color: #f2f2f2;
 }
 
 /* body {
