--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@
   padding: 10px;
   border: 1px solid black;
   border-radius: 5px;
+  box-shadow: 5px 10px #668cff;
   background-color: #f2f2f2;
 }
 
